# trackerSW

./: .gitignore  LICENSE  Layer.py  README.md  TripletPixel_material.cfg  TripletPixel_module0.cfg  beamProfile.py  configGenerator.py  defaultConfig.py  det_hitmap.py  example_config.cfg  extract_coords.py  plot_hits.py  read_cluster.py
ZZZ/: read_cluster.py  visgdml.C
analysis/: .trackParameters.C.swp  trackParameters.C
config-generator/: Layer.py  README.md  configGenerator.py  defaultConfig.py  generateConfigs.sh  generateConfigsQuartet.sh
dataRate/: indexOccupancy.html  innerBarrel.html  innerBarrel.json  parseDataRate.py  triplet1_50.html  triplet1_50.json  triplet2_50.html  triplet2_50.json  triplet3_50.html  triplet3_50.json  triplet4_50.html  triplet4_50.json  triplet5_50.html  triplet5_50.json
delphes/analysis/: CMakeLists.txt  Colours.py  Example1.cpp  basicTrackReconstruction.cpp  basicTrackReconstructon.cpp  extractRates.py  extractTrackParameters.py  functions.py  plotting.cpp  trackParameters.C  trackParameters.cpp  trackTurnOn.py  tracksAgain.py
particleProperties/: mg_pp_hh_pu0.root  mg_pp_hh_pu1000.root  mg_pp_hh_pu200.root  mg_pp_thh_pu0.root  mg_pp_thh_pu1000.root  mg_pp_thh_pu200.root  mg_pp_tt_nlo_pu0.root  py8_pp_minbias_pu0.root  py8_pp_minbias_pu1000.root  py8_pp_minbias_pu200.root
plotting/: averageFakeRatePt2.json  beamProfile.py  bendingRadius.py  colours.py  compareTrackBranches.py  effectivePileup.py  extractRatesSingle.py  extractTrackParameters.py  extract_coords.py  fakeRatePlotter.py  hitMultiplicity.py  plotAcceptances.py  (+12 more)
(+59 files in other folders)
